--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -55,18 +55,16 @@ Readings:
 
 Lectures: 
 
-- Class 3 (10/4) slides: 
-<!-- [html](./slides/EDUC641_3_categdescr.html) | [pdf](./slides/EDUC641_3_categdescr.pdf)  -->
-- Data: 
-<!-- [deathpenalty.csv](./data/deathpenalty.csv) | [codebook](./data/deathpenalty.csv) -->
-- R code: 
-<!-- [R script](./slides/EDUC641_3_code.R) -->
+- Class 3 (10/4) slides: [html](./slides/EDUC641_3_categdescr.html) | [pdf](./slides/EDUC641_3_categdescr.pdf)
+- Data: [deathpenalty.csv](./data/deathpenalty.csv) | [codebook](./data/deathpenalty.csv)
+- Codebook: [pdf](./data/deathpenalty_codebook.pdf)
+- R code: [R script](./slides/EDUC641_3_code.R)
 
 Assignment 1: 
 
 - Due: October 10, 11:59pm
-<!-- - [html file](./assignments/assignment01.html) -->
-<!-- - [cat.csv dataset](./data/cat.csv) -->
+- [html file](./assignments/assignment01.html)
+- [cat.csv dataset](./data/cat.csv)
 
 ## Unit 2
 
