--- a/assignments/assignment01.Rmd
+++ b/assignments/assignment01.Rmd
@@ -6,24 +6,22 @@ output: html_document
 
 ### General Guidelines
 
-* The purpose of this assignment is to practice the concepts and vocabulary we have been modeling in class and implement some of the techniques we have learned. You may work on your own or collaborate with one partner. Please make sure that you engage in a a full, fair and mutually-agreeable collaboration if you do choose to collaborate. If you do collaborate, you should plan, execute and write-up your analyses together, not simply divide the work. Please make sure to indicate clearly when your work is joint and any other individual or resource (outside of class material) you consulted in your responses.
+The purpose of this assignment is to practice the concepts and vocabulary we have been modeling in class and implement some of the techniques we have learned. You may work on your own or collaborate with one partner. Please make sure that you engage in a a full, fair and mutually-agreeable collaboration if you do choose to collaborate. If you do collaborate, you should plan, execute and write-up your analyses together, not simply divide the work. Please make sure to indicate clearly when your work is joint and any other individual or resource (outside of class material) you consulted in your responses.
 
 
 ### Submission Requirements
 
 Please upload below two files on Canvas:  
 
- * An .html or .pdf file that includes both - 
-   + your typed responses (in your own words and not identical to anybody else's), tables, and/or figures to the problems  
-   + and the R code chunks that generated your answers (hint: if you choose to compose your answers in Rmarkdown, simply set up echo = TRUE, include = TRUE in you .Rmd file)  
-   
- * The .Rmd or .R file that you used to render the tables and figures in the above html/pdf. 
+1. An .html or .pdf file that includes your typed responses (in your own words and not identical to anybody else's except your partner), tables, and/or figures to the problems
+2. The .Rmd or .R file that you used to render the tables and figures in the above html/pdf. 
 
+*If you have prior experience, you may choose to compose your answers in RMarkdown and render to a Word doc or pdf. If so, you can simply set up echo = TRUE and include = TRUE in your .Rmd file to allow both code and answers to display in a single output file. If you have no idea what the preceding sentence meant, ignore it.* 
+   
 ### Objectives of this assignment
 
- * Describe and summarize categorical data
-
- * Create visualizations of categorical data
+- Describe and summarize categorical data
+- Create visualizations of categorical data
 
 ### Data Background
 
@@ -31,9 +29,12 @@ The dataset we'll be using in this assignment is drawn from the NCRECE [Teacher 
 
 While the primary goals of the PD intervention were to improve language and literacy skills, researchers theorized that if teachers became more effective at teaching literacy, they might also improve the quality of their relationships with their students and families. In turn, these improved relationships might lead to other positive effects of the PD intervention. One pair of researchers ([Hanno and Gonzalez, 2020](https://doi.org/10.1080/19345747.2019.1634170)) wanted to learn whether the PD intervention improved student attendance. 
 
-The paired assignments 1 and 2 will ask you to answer a few research questions: Were the students less likely to be chronically absent if there teachers participated the consultancy PD intervention? Were the female students less likely to be chronically absent if there teachers participated in the consultancy PD intervention? How about the male students?
+The paired assignments 1 and 2 will ask you to answer two **research questions**: 
 
-**Sample**. Our dataset is student-level data for 942 preschool students, which is the same sample used in the original Hanno and Gonzalez (2020) paper. The authors test several approaches to compute the outcome variable, chronic absenteeism, since some key information on full year absent days is not publicly available. For simplifying reasons, the approach we use in our sample is one from the robustness check rather the one used in the main results of their paper.
+1. Did teacher participation in a consultancy-based professional development decrease rates of student chronic absenteeism? 
+2. Did the effects of teacher-participation in a consultancy-based professional development differ by students' gender identities?
+
+**Sample**. Our dataset is student-level data for 942 preschool students, which is the same sample used in the original Hanno and Gonzalez (2020) paper. The authors test several approaches to compute the outcome variable: chronic absenteeism. For simplifying reasons, the approach we use in our sample is one from one of their the robustness checks rather the one used in the main results of their paper.
 
 **Key variables**. The outcome measure in our data is whether a student is "chronically absent" from school. In many jurisdictions, students are labelled "chronically absent" if they miss 10 percent or more of the school year. Given the typical 180-day school, students are, therefore, defined as chronically absent if they miss 18 or more days in a year. 
 
@@ -48,19 +49,19 @@ Details on all variables are as follows:
 
 #### 1. Read in the dataset
 
-Open your RStudio, create a project and save it. Go to the root directory of the project and create a folder named "data". Download the [cat.csv dataset](./data/cat.csv) and store it in the folder "data". Create an Rmd/R file in the project root directory. Read the data into your R environment. You do not need to include this response in your memo; only in your code.
+Open your RStudio, create a project and save it. Go to the root directory of the project and create folders named: "Code", "Data", "Figures" and "Tables." Download the [cat.csv dataset](./data/cat.csv) and store it in the folder "Data". Create an R script (or .Rmd) file in the Code folder. Read the data into your R environment. You do not need to include this response in your memo; only in your code.
 
 #### 2. Understand the structure of the data
 
 2.1. Write your own code to view the dataset and write 3-4 sentences about the structure of the data (how many variables are there, what is the current type of each variable and what the type should be, how many rows/observations, etc.).
 
 
-2.2. Write your own code to transform the variables, *treat*, *absenteeism*, and *cgender* into factor variables and label them consistently with the data background information above. 
+2.2. Write your own code to transform the variables, *treat*, *absenteeism*, and *cgender* into factor variables and label them consistently with the data background information above. You do not need to include this response in your memo; only in your code.
 
 #### 3. Describe and summarize the two key variables
 
-3.1. How many students were in the treatment group? Control group? Provide your response and create a table AND a figure to demonstrate your answer. *Make sure to label all parts of your figure*
+3.1. Write one sentence that states how many students were in the treatment and control groups. Provide your response and create a table AND a figure to demonstrate your answer. *Make sure to label all parts of your figure*
 
-3.2. What proportion of students were chronically absent? Provide your response and create a table AND a figure to demonstrate your answer. Does this seem like a large or small proportion? *Make sure to label all parts of your figure*
+3.2. Write one sentence that states what *proportion* of students were chronically absent? Provide your response and create a table AND a figure to demonstrate your answer. Write one sentence indicating whether this seems like a large or small proportion to you. *Make sure to label all parts of your figure*
 
 
