--- a/slides/EDUC641_2_measures.Rmd
+++ b/slides/EDUC641_2_measures.Rmd
@@ -147,6 +147,7 @@ Each type of measurement has a set of properties which determines the appropriat
 #### Represents *quantity* and has *equal units*
 #### Ordinal scale + equal measurement units
 #### **There is no absolute zero**
+#### Can be negative
 
 #### Examples:
 - The Fahrenheit temperature scale
@@ -235,7 +236,7 @@ Is there a mean (or standard deviation) for the hair color of the students in th
 # More complexity
 
 - Quasi-interval scales
-- Non-negative ratio scales
+- Non-negative interval scales
 - Quasi-ordinal scales
 
 --
