--- a/slides/EDUC641_3_categdescr.Rmd
+++ b/slides/EDUC641_3_categdescr.Rmd
@@ -39,7 +39,10 @@ extra_css <- list(
   ".red-pink" = list(color= "red_pink"),
   ".grey-light" = list(color= "grey_light"),
   ".purple" = list(color = "purple"),
-  ".small" = list("font-size" = "90%"))
+  ".large" = list("font-size" = "120%"),
+  ".small" = list("font-size" = "90%"),
+  ".tiny" = list("font-size" = "70%"),
+  ".tiny2" = list("font-size" = "50%"))
 
 write_extra_css(css = extra_css, outfile = "my_custom.css")
 
@@ -59,6 +62,11 @@ options(device = function(file, width, height) {
 options(knitr.table.format = "html")
 
 ```
+class: middle, inverse
+
+# Quiz
+
+---
 # Roadmap
 
 ```{r, out.width = "80%", echo=F}
@@ -81,7 +89,7 @@ options(knitr.table.format = "html")
 .pull-left[
 - [Warren McCleskey](https://www.theatlantic.com/politics/archive/2019/06/legacy-mccleskey-v-kemp/591424/) sentenced to death for murdering police officer during armed robbery in Georgia (1978)
 - McCleskey appeals to the Supreme Court, arguing his death sentence is due to racial bias in sentencing...his appeal is rejected
-- Senator Edward Kennedy sponsors the Racial Justice Act to enforce the Constitution's promise of equality under the law
+- Senator Edward Kennedy sponsors the Racial Justice Act to enforce "the Constitution's promise of equality under the law"
 - McCleskey executed in Georgia (1991)
 ]
 .pull-right[
@@ -113,10 +121,11 @@ include_graphics("mccleskey.png")
 ---
 # Materials
 
-### 1. Death penalty data (in file called deathpenalty.csv)
-### 2. Codebook describing the contents of said data
-### 3. R script to conduct the data analytic tasks of the unit
-
+.large[
+1. Death penalty data (in file called deathpenalty.csv)
+2. Codebook describing the contents of said data (deathpenalty_codebook.pdf)
+3. R script to conduct the data analytic tasks of the unit (EDUC641_3_code.R)
+]
 
 ---
 # Let's first access the data
@@ -127,27 +136,50 @@ Baldus, Pulaski and Woodworth (1983) compiled criminal justice and crude demogra
 
 
 ```{r, echo= T}
-d <- read.csv('C:/Users/daviddl/Documents/EDUC/641/data/deathpenalty.csv')
+d <- read.csv('C:/Users/daviddl/Documents/EDUC/EDUC641_22F/data/deathpenalty.csv')
 # but there are a lot of reasons to avoid using a hard-coded filepath
 # so instead, we'll use our first R package
-```
 
---
-
-```{r, echo=T}
-df <- read.csv(here("data/deathpenalty.csv"))
-# it is common in R to name our datasets short names 
-# so as to reduce typing (df for dataframe)
-
-# Also, note how I can write anything I want after a # sign and it 
+# Side note, I can write anything I want after a # sign and it 
 # doesn't cause any problems for your program. These are called  
 # comments and are critical to remind you (and tell others) what 
 # you are doing!
 ```
 
+---
+# Let's first access the data
+
+Baldus, Pulaski and Woodworth (1983) compiled criminal justice and crude demographic information on all convicted murderers in the state of Georgia from in the mid-1970s. We have access to a simplified version of these data.
+
+```{r, echo=T}
+# The first thing we'll do is to install the package
+# install.packages(here)  <- when you do this, remove the #
+# Then, we'll load the package:
+
+library(here)
+```
+
+--
+While you're at it, do the same for `tidyverse` and `ggplot2` !
+
+---
+# Let's first access the data
+
+Baldus, Pulaski and Woodworth (1983) compiled criminal justice and crude demographic information on all convicted murderers in the state of Georgia from in the mid-1970s. We have access to a simplified version of these data.
+
+```{r, echo=T}
+# Ok, now we're ready to get started:
+
+df <- read.csv(here("data/deathpenalty.csv"))
+# it is common in R to name our datasets short names 
+# so as to reduce typing (df for dataframe)
+
+```
+
 --
 
 #### but where did our data go?
+
 ---
 # Understanding data structure
 
@@ -161,11 +193,22 @@ df
 ```{r, echo=T}
 names(df)
 head(df)
-str(df)
 ```
+
+Some vocabulary:
+- .blue[**Observation**]: each row contains information on one person
+- .blue[**Variable**]: each column (R stores these as "vectors")
+- .blue[**Values**]: entries in the column
+
 
 ---
 # Putting words to numbers
+
+```{r, echo=T}
+str(df)
+```
+
+--
 We know from our codebook what this long list of numbers means, so let's make our dataset a little more readable...
 ```{r, echo=F}
 df$rvictim <- factor(df$rvictim,
@@ -232,12 +275,13 @@ barplot(prop, xlab = "Race of Victim",
 Let's start to get familiar with the beauty of `ggplot`
 
 ```{r, echo=T, fig.height=4}
-rd <- ggplot2::ggplot(df, aes(rdefend)) + geom_bar() +
+rd <- ggplot(df, aes(rdefend)) + geom_bar() +
          xlab("Race of Defendant") 
 ```
 
 ```{r, echo=F, fig.height=4}
-rd + geom_text(aes(label = ..count..), stat='count', vjust = -0.5) +
+rd + geom_text(aes(label = ..count..), stat='count', vjust = -0.5, size=6) +
+    ylim(0,1550) +
     theme_minimal(base_size = 16)
 ```
 
