--- a/assignments.Rmd
+++ b/assignments.Rmd
@@ -41,7 +41,7 @@ Objectives of this assignment
 Deadline: October 10, 11:59pm
 
 Download: 
-<!-- [html file](./assignments/assignment01.html); [cat.csv dataset](./data/cat.csv) -->
+[html file](./assignments/assignment01.html); [cat.csv dataset](./data/cat.csv)
 
 Key: [doc file]; [R script]
 
