--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -58,6 +58,7 @@ Lectures:
 - Class 3 (10/4) slides: [html](./slides/EDUC641_3_categdescr.html) | [pdf](./slides/EDUC641_3_categdescr.pdf)
 - Data: [deathpenalty.csv](./data/deathpenalty.csv) | [codebook](./data/deathpenalty_codebook.pdf)
 - R code: [R script](./slides/EDUC641_3_code.R)
+- Lab slides: [html](https://claireconglizhang.github.io/my-slides/EDUC64122F/lab2.html#1)
 
 Assignment 1: 
 
