--- a/slides/EDUC641_3_categdescr.Rmd
+++ b/slides/EDUC641_3_categdescr.Rmd
@@ -153,7 +153,8 @@ Baldus, Pulaski and Woodworth (1983) compiled criminal justice and crude demogra
 
 ```{r, echo=T}
 # The first thing we'll do is to install the package
-# install.packages(here)  <- when you do this, remove the #
+# install.packages("here")  <- when you do this, remove the #
+# don't forget the quotes around the package name!
 # Then, we'll load the package:
 
 library(here)
