--- a/assignments.Rmd
+++ b/assignments.Rmd
@@ -40,10 +40,9 @@ Objectives of this assignment
 
 Deadline: October 10, 11:59pm
 
-Download: 
-[html file](./assignments/assignment01.html) | [cat.csv dataset](./data/cat.csv)
+Download: [html file](./assignments/assignment01.html) | [cat.csv dataset](./data/cat.csv)
 
-Key: [doc file]; [R script]
+Key: [doc file](./assignments/keys/assignment01_key.docx); [R script](./assignments/keys/assignment_01_key.R)
 
 ## 3.2. Assignment 2 
 
