--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -87,8 +87,7 @@ Readings:
 Lectures:
 
 - Classes 4-5 (10/6 and 10/11) slides: [html](./slides/EDUC641_4_categrel.html) | [pdf](./slides/EDUC641_4_categrel.pdf)
-- Class 6 (10/13) slides: 
-<!-- [html](./slides/EDUC641_6_history.html) | [pdf](./slides/EDUC641_6_history.pdf) -->
+- Class 6 (10/13) slides: [html](./slides/EDUC641_6_history.html) | [pdf](./slides/EDUC641_6_history.pdf)
 
 
 - Data: [deathpenalty.csv](./data/deathpenalty.csv) | [codebook](./data/deathpenalty.csv) 
