--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -124,16 +124,13 @@ Readings:
 
 Lecture slides: 
 
-- Classes 7-9 (10/18, 10/20 & 10/25) slides: 
-<!-- [html](./slides/EDUC641_7_continuousdescr.html) | [pdf](./slides/EDUC641_7_continuousdescr.pdf) -->
+- Classes 7-8 (10/18 & 10/20) slides: [html](./slides/EDUC641_7_continuousdescr.html) | [pdf](./slides/EDUC641_7_continuousdescr.pdf)
+- Class 9 (10/25) slides: [html] | [pdf]
 - Classes 10-13 (10/27, 11/1, 11/3 & 11/8) slides: 
 <!-- [html](./slides/EDUC641_10_inference.html) | [pdf](./slides/EDUC641_10_inference.pdf) -->
 
-
-- Data: 
-<!-- [life_expectancy.csv](./data/life_expectancy.csv) -->
-- R code: 
-<!-- [R Script](./slides/EDUC641_7_code.R) -->
+- Data: [life_expectancy.csv](./data/life_expectancy.csv) | [codebook](./data/life_expectancy_codebook.pdf)
+- R code: [R Script](./slides/EDUC641_7_code.R)
 
 Assignment 3: 
 
